# Optimized-Photon-Mapping

./: README.md  writeup.txt
scenes/: cornell_box.scene
src/: CMakeLists.txt
src/application/: application.cpp  imageio.cpp  scene_loader.cpp  scene_loader.hpp
src/math/: color.hpp  matrix.hpp  quaternion.hpp  random462.hpp  vector.hpp
src/p4/: CMakeLists.txt  main.cpp  raytracer.cpp  raytracer.hpp
src/scene/: CMakeLists.txt  material.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  ray.cpp  ray.hpp  scene.cpp  scene.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
